--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
-body {
+
+
+.weatherApp {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+}body {
     font-family: "Open Sans", sans-se;
-  }
-  
-  .weatherApp {
-    max-width: 600px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid black;
-    border-radius: 10px;
   }
   
   h1 {
@@ -78,10 +78,10 @@ body {
   opacity: 0.6;
 }
 
-  .weather-forecast-temp{
+  .weather-forecast-temperature{
     font-size: 13px;
   }
 
-  .weather-forecast-temp-min{
+  .weather-forecast-temperature-min{
     opacity: 0.6;
   }
